Fix broken build